--- a/mod_loveos_events/conf/mod_loveos_events.yml
+++ b/mod_loveos_events/conf/mod_loveos_events.yml
@@ -1,4 +1,5 @@
 modules:
   mod_loveos_events: 
-    service: https://notification.ejabberd/rest
+    service_msg: https://loveos-chat-rabbitmq-connector/message/sent
+    service_ack: https://loveos-chat-rabbitmq-connector/message/read
 
